--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -14,5 +14,7 @@
     <a href="www.google.com"> Google</a>
     <br>
     <a href="https://github.com/punit-sirohi">My Git Hub account</a>
+    <br>
+    <a href="Hello.html">Hello Site</a>
 </body>
 </html>
