Added image in program file

--- a/Web Dev By EduSkills/First_Program.html
+++ b/Web Dev By EduSkills/First_Program.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Programe</title>
 </head>
+
 <body>
     Hello! Punit Sirohi.
+    <br>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+    <em>Hi Everyone</em>
+    <br>
+    <br>
+    <strong>Punit Sirohi</strong>
+    <br>
+    <strong>Hey There</strong>
+    <br>
+    <h3>Unordered List Tag</h3>
+    <ul type="square">
+        <li>Car</li>
+        <dl>Hello there my name is car and i am both public as well as private transport vehicle.</dl>
+        <li>Bike</li>
+        <dl>Hello there my name is bike and i am also public as well as private transprot vehicle.</dl>
+        <li>Cycle</li>
+        <dl>Hello there my name is cycle and i am a private transport vehicle.</dl>
+        <li>Bus</li>
+        <dl>Hello There my name is bus and I am a public transport vehicle.</dl>
+    </ul>
+    <h3>Ordered List Tag</h3>
+    <ol>
+        <li>BMW</li>
+        <li>Audi</li>
+        <li>Buggati</li>
+        <li>Pagani</li>
+    </ol>
+    <br>
+    <h3>Anchor Tag</h3>
+    <a href="https://www.google.com">Google</a>
+    <br>
+    <a href="https://www.linkedin.com/in/punit-sirohi">My Linkedin Account</a>
+    <br>
+    <a href="https://github.com/punit-sirohi">My Github Account</a>
+    <br>
+    <h3>Image Tag</h3>
+    <img
+        src="https://static.vecteezy.com/system/resources/thumbnails/053/733/179/small/every-detail-of-a-sleek-modern-car-captured-in-close-up-photo.jpg">
+    <br>
+    <h2>Buggati</h2>
+    <img src="Buggati.avif" width="625" title="Buggati">
+    <p>This is a Bugatti Chiron, one of the fastest and most luxurious hypercars in the world. It's powered by an insane
+        8.0-liter quad-turbocharged W16 engine that produces around 1500 horsepower, allowing it to hit mind-blowing
+        speeds over 400 km/h.
+        <br>
+        But it's not just about speed — the design is super aggressive yet elegant, with that iconic horseshoe grille,
+        sleek curves, and a luxury interior that feels like a private jet cockpit. It's basically a perfect mix of
+        engineering, power, and royal-level luxury.</p>
+    
+
 </body>
+
 </html>
